# PyFibonacci

./: .gitignore  CONTRIBUTING.md  EVALUATION.md  JUSTIFICATIONS.md  README.md  go.mod  go.sum  main.py  main.rs  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
cli/: __init__.py  main.py  progress_bar.py  ui.py
cmd/fibcalc/: main.go  main_test.go
fib_rs/: Cargo.toml
fib_rs/src/: lib.rs  main.rs
fibonacci/: __init__.py  calculator.py  fast_doubling.py  fft.py  fibonacci-tests.py  karatsuba.py  karatsuba_doubling.py  matrix_exponentiation.py  multiplication.py  utils.py
internal/cli/: ui.go  ui_test.go
internal/fibonacci/: calculator.go  fastdoubling.go  fft.go  fft_based.go  fibonacci_test.go  matrix.go
src/pyfibonacci/: app.py  calibrate.py
src/pyfibonacci/cli/: args.py  main.py  progress.py
src/pyfibonacci/core/: algorithms.py  context.py  multiplication.py
tests/: __init__.py  test_algorithms.py  test_app.py  test_benchmark_fix.py  test_benchmarks.py  test_bug.py  test_calibrate.py  test_cli_args.py  test_cli_main.py  test_cli_progress.py  test_fibonacci.py  test_multiplication.py
