[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfibonacci"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@anthropic.com" },
]
description = "A high-performance Fibonacci calculator in Python, migrated from Go."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "hypothesis",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
pyfibonacci = "pyfibonacci.cli.main:main"
